# api-gateway/src/main/resources/static/openapi.yml
@@ -2847,7 +2847,7 @@ components:
 
     IssueShortResponseDto:
       type: object
-      required: [id, issueKey, summary, issueType, priority, assigneeId]
+      required: [id, issueKey, summary, issueType, priority, assigneeId, statusKey]
       properties:
         id:
           type: string
@@ -2866,6 +2866,13 @@ components:
           format: double
           description: Оценка сложности задачи в story points
           minimum: 0
+        projectId:
+          type: string
+        projectKey:
+          type: string
+        statusKey:
+          type: string
+
 
     ListIssuesResponseDto:
       type: object
